fix(header): adjust header margin and align socials list items

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -415,7 +415,7 @@ header {
 	margin-top: 100px;
 	background-color: $background-color_4;
 
-	
+
 	&__header {
 		text-align: center;
 		margin-bottom: 3rem;
@@ -1419,7 +1419,7 @@ header {
 		}
 
 		&__socials-list {
-			align-items: center;
+			align-items: flex-start;
 		}
 	}
 
